--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/localizations": "^3.28.5",
+    "@clerk/nextjs": "^6.35.5",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
     "lucide-react": "^0.555.0",
