Migración completa a MySQL, configuración de Clerk, eliminación de Supabase

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@clerk/localizations": "^3.28.5",
+    "@clerk/localizations": "^3.29.0",
     "@clerk/nextjs": "^6.35.5",
     "@stripe/react-stripe-js": "^5.4.1",
     "@stripe/stripe-js": "^8.5.3",
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
     "lucide-react": "^0.555.0",
+    "mysql2": "^3.15.3",
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
