--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@clerk/localizations": "^3.29.0",
-    "@clerk/nextjs": "^6.35.5",
     "@stripe/react-stripe-js": "^5.4.1",
     "@stripe/stripe-js": "^8.5.3",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.86.0",
+    "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
+    "jose": "^6.1.3",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.555.0",
     "mysql2": "^3.15.3",
     "next": "16.0.5",
@@ -28,6 +29,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
