--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "lucide-react": "^0.555.0",
     "mysql2": "^3.15.3",
     "next": "16.0.5",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "stripe": "^20.0.0",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.8"
