primeros cambios creacion bd login etc1

--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,12 @@
+# MySQL Configuration
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=
+DB_NAME=fitovida
+
 # Modo Demo - Activa esto para probar sin base de datos
-DEMO_MODE=true
+DEMO_MODE=false
 
 # JWT Secret
 JWT_SECRET=fitovida-secret-key-change-in-production
