--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.555.0",
     "mysql2": "^3.15.3",
-    "next": "16.0.5",
+    "next": "^16.1.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "stripe": "^20.0.0",
