--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "sync-data": "node verify-data-sync.js"
   },
   "dependencies": {
     "@stripe/react-stripe-js": "^5.4.1",
